--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env PORT=5000 NODE_ENV=production node ./project2/index.js"
+    "start": "cross-env PORT=5000 NODE_ENV=production node ./index.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2"
