--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
   }
 }
